Add Clicky analytics

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -4,6 +4,10 @@
   MathJax.Hub.Config({ tex2jax: {inlineMath: [["$", "$"]]} })
 </script>
 
+<!-- Clicky analytics -->
+<script async src="//static.getclicky.com/101349618.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101349618ns.gif" /></p></noscript>
+
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
