--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -28,15 +28,18 @@
 
 <!-- Custom styling -->
 <style>
+  html {
+    font-size: 18px;
+    font-size: min(max(1rem, 4vw), 22px);
+  }
+
   body {
     font-family: Equity, Georgia, serif;
-    font-size: 1.25em;
     background-color: #fffff8;
   }
 
   code {
     font-family: Triplicate, 'Lucida Console', monospace;
-    font-size: 90%;
   }
 
   h1, h2, h3, h4, h5, h6 {
