Add better code and code block styling, instead of GitHub gists

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -40,6 +40,15 @@
 
   code {
     font-family: Triplicate, 'Lucida Console', monospace;
+    font-size: 75%;
+  }
+
+  pre code {
+    white-space: pre;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    font-size: 13px;
+    font-size: min(max(12px, 2vw), 14px);
   }
 
   h1, h2, h3, h4, h5, h6 {
