Set line height of body text to 1.5

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -38,6 +38,10 @@
     background-color: #fffff8;
   }
 
+  content {
+    line-height: 1.5;
+  }
+
   code {
     font-family: Triplicate, 'Lucida Console', monospace;
     font-size: 75%;
