Fiddle with font sizes again

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -30,7 +30,7 @@
 <style>
   html {
     font-size: 18px;
-    font-size: min(max(1rem, 4vw), 22px);
+    font-size: min(max(18px, 4vw), 22px);
   }
 
   body {
@@ -44,14 +44,14 @@
 
   code {
     font-family: Triplicate, 'Lucida Console', monospace;
-    font-size: 75%;
+    font-size: 85%;
   }
 
   pre code {
     white-space: pre;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
-    font-size: 13px;
+    font-size: 12px;
     font-size: min(max(12px, 2vw), 14px);
   }
 
