--- a/assets/fonts/nicholson-gothic.css
+++ b/assets/fonts/nicholson-gothic.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: NicholsonGothic;
-    src: url(/assets/fonts/NicholsonGothic-Regular.otf) format("opentype");
+    src: url(/assets/fonts/NicholsonGothic-Regular.woff2) format("woff2");
     font-weight: 400;
     font-style: normal;
 }
