--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -30,12 +30,13 @@
 <style>
   html {
     font-size: 18px;
-    font-size: min(max(18px, 4vw), 22px);
+    font-size: min(max(18px, 4vw), 26px);
   }
 
   content { line-height: 1.45; }
 
   body {
+    max-width: 800px;
     font-family: Equity, Georgia, serif;
     background-color: #fffff8;
   }
@@ -66,6 +67,12 @@
 
   h2, h3, h4, h5, h6 { margin-top: 8%; margin-bottom: -1%; }
   nav { margin-top: 3%; margin-bottom: 5%; }
+
+  /* Indent more between dates and blog post titles to compensate for larger
+     font size */
+  ul.blog-posts li span {
+    flex: 0 0 140px;
+  }
 
   @media (prefers-color-scheme: dark) { body { background-color: #111111; } }
 </style>
