--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -74,5 +74,16 @@
     flex: 0 0 140px;
   }
 
+  /* Newsletter subscriber form in footer */
+  input[type=email] {
+    font-family: Triplicate, 'Lucida Console', monospace;
+    font-size: 80%;
+  }
+
+  input[type=submit] {
+    font-family: Equity, Georgia, serif;
+    font-size: 80%;
+  }
+
   @media (prefers-color-scheme: dark) { body { background-color: #111111; } }
 </style>
