--- a/themes/hugo-bearblog/layouts/partials/footer.html
+++ b/themes/hugo-bearblog/layouts/partials/footer.html
@@ -1,1 +1,15 @@
+<form
+  action="https://buttondown.email/api/emails/embed-subscribe/eigenfoo"
+  method="post"
+  target="popupwindow"
+  onsubmit="window.open('https://buttondown.email/eigenfoo', 'popupwindow')"
+  class="embeddable-buttondown-form"
+>
+  <label for="bd-email">Get my (monthly?) blog posts over email:</label><br>
+  <input type="email" name="email" id="bd-email" placeholder="your@email.com" />
+  <input type="submit" value="Subscribe" />
+</form>
+
+<br>
+
 {{ if ne .Site.Params.hideMadeWithLine true }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }}
