Add first Loplop cryptic
Allow pages to disable the newsletter subscribe footer, so as not to
cause confusion on the crosswords page. Disable to newsletter subscribe
footer on the work page.

--- a/themes/hugo-bearblog/layouts/partials/footer.html
+++ b/themes/hugo-bearblog/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+{{ if ne .Params.subscribeFooter false }}
 <form
   action="https://buttondown.email/api/emails/embed-subscribe/eigenfoo"
   method="post"
@@ -11,5 +12,6 @@
 </form>
 
 <br>
+{{ end }}
 
 {{ if ne .Site.Params.hideMadeWithLine true }}Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>{{ end }}
