Add crossword newsletter

--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -5,8 +5,32 @@
   <img src="/assets/images/loplop-profile-pic.png" alt="A picrew (anime-style image) of George (a.k.a. Loplop)."> 
 </center>
 
-<p>Cryptic crosswords and other variety puzzles, published whenever I finish writing them. “A mix of easy and diabolical clues.”</p>
+<p>
+  Cryptic crosswords and other variety puzzles, published whenever I finish writing them.
+  Creator of <a href="https://cryptics.georgeho.org/"><code>cryptics.georgeho.org</code></a>.
+  <i>“A mix of easy and diabolical clues.”</i>
+</p>
 
-<p>You can follow me on <a href="https://twitter.com/__loplop/">Twitter</a>, <a href="https://crosshare.org/loplop">Crosshare</a> or subscribe to my <a href="/crosswords/feed.xml">RSS feed</a>.</p>
+<p>
+  To get updated on new crosswords, follow or subscribe to my
+  <a href="https://twitter.com/__loplop/">Twitter</a>,
+  <a href="https://crosshare.org/loplop">Crosshare</a>,
+  <a href="https://buttondown.email/loplop">newsletter</a>,
+  or <a href="/crosswords/feed.xml">RSS feed</a>.
+</p>
+
+<center>
+  <form
+    action="https://buttondown.email/api/emails/embed-subscribe/loplop"
+    method="post"
+    target="popupwindow"
+    onsubmit="window.open('https://buttondown.email/loplop', 'popupwindow')"
+    class="embeddable-buttondown-form"
+  >
+  <label for="bd-email">Get my crosswords over email:</label>
+    <input type="email" name="email" id="bd-email" />
+    <input type="submit" value="Subscribe" />
+  </form>
+</center>
 
 <hr>
