--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -19,7 +19,7 @@
   or <a href="/crosswords/feed.xml">RSS feed</a>.
 </p>
 
-<center>
+<center><p>
   <form
     action="https://buttondown.email/api/emails/embed-subscribe/loplop"
     method="post"
@@ -31,6 +31,7 @@
     <input type="email" name="email" id="bd-email" />
     <input type="submit" value="Subscribe" />
   </form>
-</center>
+</p></center>
 
 <hr>
+
