--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -37,7 +37,7 @@
 
   body {
     max-width: 800px;
-    font-family: Equity, Georgia, serif;
+    font-family: Equity, Palatino, 'Times New Roman', serif;
     background-color: #fffff8;
   }
 
@@ -81,7 +81,7 @@
   }
 
   input[type=submit] {
-    font-family: Equity, Georgia, serif;
+    font-family: Equity, Palatino, 'Times New Roman', serif;
     font-size: 80%;
   }
 
