Change newsletter provider to TinyLetter

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -75,7 +75,7 @@
   }
 
   /* Newsletter subscriber form in footer */
-  input[type=email] {
+  input[name=email] {
     font-family: Triplicate, 'Lucida Console', monospace;
     font-size: 80%;
   }
