--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -15,22 +15,21 @@
   To get updated on new crosswords, follow or subscribe to my
   <a href="https://twitter.com/__loplop/">Twitter</a>,
   <a href="https://crosshare.org/loplop">Crosshare</a>,
-  <a href="https://buttondown.email/loplop">newsletter</a>,
+  <a href="https://tinyletter.com/loplop">newsletter</a>,
   or <a href="/crosswords/feed.xml">RSS feed</a>.
 </p>
 
-<center><p>
-  <form
-    action="https://buttondown.email/api/emails/embed-subscribe/loplop"
-    method="post"
-    target="popupwindow"
-    onsubmit="window.open('https://buttondown.email/loplop', 'popupwindow')"
-    class="embeddable-buttondown-form"
-  >
-  <label for="bd-email">Get my crosswords over email:</label>
-    <input type="email" name="email" id="bd-email" />
-    <input type="submit" value="Subscribe" />
+<p>
+  <form style="text-align:center;"
+        action="https://tinyletter.com/loplop"
+        method="post"
+        target="popupwindow"
+        onsubmit="window.open('https://tinyletter.com/loplop', 'popupwindow', 'scrollbars=yes, width=800, height=600'); return true">
+  <label for="tlemail">Get my crosswords over email:</label>
+  <input type="text" name="email" id="tlemail" placeholder="email@example.com" />
+  <input type="hidden" value="1" name="embed"/>
+  <input type="submit" value="Subscribe" />
   </form>
-</p></center>
+</p>
 
 <hr>
