Use full resolution images

--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -1,9 +1,9 @@
 <!-- This HTML gets added to the start of the Crosswords section list. -->
 <h1> Loplop Crosswords </h1>    
 
-<center>
-  <img src="/assets/images/loplop-profile-pic.png" alt="A picrew (anime-style image) of George (a.k.a. Loplop)."> 
-</center>
+<div style="text-align:center"><a href="/assets/images/loplop-profile-pic.png">
+  <img width="50%" height="auto" src="/assets/images/loplop-profile-pic.png" alt="A picrew (anime-style image) of George (a.k.a. Loplop)."> 
+</a></div>
 
 <p>
   Cryptic crosswords and other variety puzzles, published whenever I finish writing them.
