--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -6,18 +6,18 @@
 </a></div>
 
 <p>
-  Cryptic crosswords and other variety puzzles, published whenever I finish writing them.
+  Indie cryptic crosswords and occasional variety puzzles, published whenever I finish writing them.
   Creator of <a href="https://cryptics.georgeho.org/"><code>cryptics.georgeho.org</code></a>.
-  <i>“A mix of easy and diabolical clues.”</i>
 </p>
 
 <p>
   To get updated on new crosswords, follow or subscribe to my
   <a href="https://twitter.com/__loplop/">Twitter</a>,
-  <a href="https://tinyletter.com/loplop">newsletter</a>,
+  <a href="https://www.getrevue.co/profile/loplop">newsletter</a>,
   or <a href="/crosswords/feed.xml">RSS feed</a>.
 </p>
 
+<!--
 <p>
   <form style="text-align:center;"
         action="https://tinyletter.com/loplop"
@@ -29,6 +29,32 @@
   <input type="hidden" value="1" name="embed"/>
   <input type="submit" value="Subscribe" />
   </form>
+</p>
+-->
+
+<p>
+<div id="revue-embed" style="border:1px solid #E6E6E6;padding:30px;text-align:center;">
+<form action="https://www.getrevue.co/profile/loplop/add_subscriber"
+      method="post"
+      id="revue-form"
+      name="revue-form"
+      target="_blank">
+  <div class="revue-form-group">
+    <label for="member_email">Get my puzzles over email: </label>
+    <input class="revue-form-field" placeholder="hello@example.com" type="email" name="member[email]" id="member_email">
+  </div>
+
+  <div class="revue-form-actions">
+    <input type="submit" value="Subscribe" name="member[subscribe]" id="member_submit">
+  </div>
+
+  <div class="revue-form-footer">
+    <div style="font-size:65%; opacity:0.7;">
+      By subscribing, you agree with Revue’s <a target="_blank" href="https://www.getrevue.co/terms">Terms of Service</a> and <a target="_blank" href="https://www.getrevue.co/privacy">Privacy Policy</a>.
+    </div>
+  </div>
+</form>
+</div>
 </p>
 
 <hr>
