--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -75,7 +75,11 @@
   }
 
   /* Newsletter subscriber form in footer */
-  input[name=email] {
+  .revue-form-group, .revue-form-actions {
+    display: inline-block;
+  }
+
+  input[type=email] {
     font-family: Triplicate, 'Lucida Console', monospace;
     font-size: 80%;
   }
