--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -68,6 +68,14 @@
   h2, h3, h4, h5, h6 { margin-top: 8%; margin-bottom: -1%; }
   nav { margin-top: 3%; margin-bottom: 5%; }
 
+  /* Center embeds */
+  p.center-embeds{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 90vw;
+  }
+
   /* Indent more between dates and blog post titles to compensate for larger
      font size */
   ul.blog-posts li span {
