--- a/themes/hugo-bearblog/layouts/_default/single.html
+++ b/themes/hugo-bearblog/layouts/_default/single.html
@@ -18,7 +18,7 @@
   {{ end }}
 </p>
 {{ if .Params.embed }}
-  <p class="center-embeds">
+  <p class="wide-embeds">
     {{ .Params.embed | safeHTML }}
   </p>
 {{ end }}
