--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -68,8 +68,8 @@
   h2, h3, h4, h5, h6 { margin-top: 8%; margin-bottom: -1%; }
   nav { margin-top: 3%; margin-bottom: 5%; }
 
-  /* Center embeds */
-  p.center-embeds{
+  /* Blog posts occasionally have embedded content, which should be wide */
+  p.wide-embeds{
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
