--- a/themes/hugo-bearblog/layouts/_default/single.html
+++ b/themes/hugo-bearblog/layouts/_default/single.html
@@ -17,4 +17,9 @@
   <a href="{{ .Permalink }}">#{{ .LinkTitle }}</a>
   {{ end }}
 </p>
+{{ if .Params.embed }}
+  <p class="wide-embeds">
+    {{ .Params.embed | safeHTML }}
+  </p>
+{{ end }}
 {{ end }}
