--- a/layouts/partials/crosswords_head.html
+++ b/layouts/partials/crosswords_head.html
@@ -13,6 +13,7 @@
 <p>
   To get updated on new crosswords, follow or subscribe to my
   <a href="https://twitter.com/__loplop/">Twitter</a>,
+  <a rel="me" href="https://bright.rosy-colored.space/@george">Mastodon</a>,
   <a href="https://www.getrevue.co/profile/loplop">newsletter</a>,
   or <a href="/crosswords/feed.xml">RSS feed</a>.
 </p>
