--- a/layouts/partials/recipes_head.html
+++ b/layouts/partials/recipes_head.html
@@ -1,11 +1,13 @@
 <!-- This HTML gets added to the start of the Recipes section list. -->
 <h1>Recipes</h1>
 
+<!--
 <p>
   <blockquote>
-    “So long as you have food in your mouth you have solved all questions for the time being.”
-    <cite>— Franz Kafka</cite>
+    “The people who give you their food give you their heart.”
+    <cite>— Cesar Chavez</cite>
   </blockquote>
 </p>
 
 <hr>
+-->
